--- a/app/index.html
+++ b/app/index.html
@@ -10,14 +10,18 @@
     <meta content="black" name="apple-mobile-web-app-status-bar-style" />
 </head>
 <body>
-	<div id="music">
+	<!--<div id="music">
         <audio id="music-src" presrc="Danny's_Theme_Suite" autoplay="" loop="">
             <source src="./music/Danny's_Theme_Suite.mp3" type="audio/mpeg">
         </audio>
         <div id="music-control" class="music-icon on"></div>
-    </div>
+    </div>-->
     <div id="app-root"></div>
 
+    <script type="text/javascript" src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
+    <script>
+    var weChatJsConfig = {"debug":false,"beta":false,"appId":"wx3d7596048e35283c","nonceStr":"RIbrISQmyn","timestamp":1459434918,"url":"http:\/\/test.haikudz.com\/index","signature":"a6e0d6138f2821758b797250c720ea860376eb4c","jsApiList":["onMenuShareTimeline","onMenuShareAppMessage"]};
+    </script>
     <script type="text/javascript" src="bundle.js" charset="utf-8"></script>
 </body>
 </html>
